# qt_homework_02

./: CMakeLists.txt  main.cpp
